force-app/main/default/objects/Shelter_Opening_Hour__c/Shelter_Opening_Hour__c.object-meta.xml
<CustomObject>
    <description>Object describing shelters open hours</description>
    <label>Shelter Opening Hour</label>
    <nameField>
        <label>Shelter Opening Hour Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shelter Opening Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>