force-app/main/default/objects/Shelter_Opening_Hour__c/fields/Shelter__c.field-meta.xml
<CustomField>
    <fullName>Shelter__c</fullName>
    <label>Shelter</label>
    <referenceTo>Shelter__c</referenceTo>
    <relationshipLabel>Shelter Opening Hours</relationshipLabel>
    <relationshipName>Shelter_Opening_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>