force-app/main/default/objects/Shelter_Opening_Hour__c/fields/Shelter_Day_Key__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Day_Key__c</fullName>
    <label>Shelter Day Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>