force-app/main/default/objects/Shelter_Opening_Hour__c/recordTypes/Shelter_Opening_Hours_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Shelter_Opening_Hours_RecordType</fullName>
    <active>true</active>
    <label>Shelter Opening Hours RecordType</label>
</RecordType>