force-app/main/default/objects/Shelter_Opening_Hour__c/recordTypes/Shelter_Opening_Hours_RT.recordType-meta.xml
<RecordType>
    <fullName>Shelter_Opening_Hours_RT</fullName>
    <active>true</active>
    <label>Shelter Opening Hours RT</label>
</RecordType>