force-app/main/default/objects/Shelter_Opening_Hour__c/validationRules/Hours_must_be_filled_if_not_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_must_be_filled_if_not_closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Closed__c = FALSE,
  OR(
    ISBLANK(Open__c),
    ISBLANK(Close__c),
    Open__c &gt;= Close__c
  )
)</errorConditionFormula>
    <errorMessage>Please fill in both open and close hour fields!</errorMessage>
</ValidationRule>